# aspen-plugins

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
crates/aspen-audit-logger/: Cargo.toml  plugin.json
crates/aspen-audit-logger/src/: lib.rs
crates/aspen-automerge-plugin/: Cargo.toml  plugin.json
crates/aspen-automerge-plugin/src/: changes.rs  crud.rs  kv.rs  lib.rs  query.rs  sync.rs  types.rs
crates/aspen-coordination-plugin/: Cargo.toml  plugin.json
crates/aspen-coordination-plugin/src/: barrier.rs  counter.rs  kv.rs  lib.rs  lock.rs  queue.rs  ratelimit.rs  rwlock.rs  semaphore.rs  sequence.rs
crates/aspen-forge-plugin/: Cargo.toml  plugin.json
crates/aspen-forge-plugin/src/: issues.rs  kv.rs  lib.rs  objects.rs  patches.rs  refs.rs  repo.rs  signing.rs  types.rs
crates/aspen-hooks-plugin/: Cargo.toml  plugin.json
crates/aspen-hooks-plugin/src/: handlers.rs  kv.rs  lib.rs  types.rs
crates/aspen-kv-counter/: Cargo.toml  plugin.json
crates/aspen-kv-counter/src/: lib.rs
crates/aspen-kv-plugin/: Cargo.toml  plugin.json
crates/aspen-kv-plugin/src/: lib.rs
crates/aspen-plugin-signing/: Cargo.toml
crates/aspen-plugin-signing/src/: error.rs  keys.rs  lib.rs  signature.rs  signer.rs  verifier.rs
crates/aspen-scheduled-cleanup/: Cargo.toml  plugin.json
crates/aspen-scheduled-cleanup/src/: lib.rs
crates/aspen-secrets-plugin/: Cargo.toml  plugin.json
crates/aspen-secrets-plugin/src/: kv.rs  lib.rs  secrets_kv.rs  transit.rs  types.rs
crates/aspen-service-registry-plugin/: Cargo.toml  plugin.json
crates/aspen-service-registry-plugin/src/: handlers.rs  kv.rs  lib.rs  types.rs
crates/aspen-sql-plugin/: Cargo.toml  plugin.json
crates/aspen-sql-plugin/src/: lib.rs
crates/cargo-aspen-plugin/: Cargo.toml
crates/cargo-aspen-plugin/src/: build.rs  check.rs  init.rs  keygen.rs  main.rs  sign.rs  verify.rs
crates/cargo-aspen-plugin/src/templates/: basic.rs  hook.rs  kv.rs  mod.rs  timer.rs
