[workspace]
members = [
    "crates/aspen-automerge-plugin",
    "crates/aspen-coordination-plugin",
    "crates/aspen-forge-plugin",
    "crates/aspen-hooks-plugin",
    "crates/aspen-secrets-plugin",
    "crates/aspen-service-registry-plugin",
    "crates/aspen-sql-plugin",
    "crates/aspen-plugin-signing",
    "crates/cargo-aspen-plugin",
]
resolver = "3"

[workspace.dependencies]
# Aspen dependencies (from aspen monorepo)
aspen-client-api = { git = "https://github.com/brittonr/aspen.git", branch = "main", default-features = false }
aspen-wasm-guest-sdk = { git = "https://github.com/brittonr/aspen.git", branch = "main" }
aspen-plugin-api = { git = "https://github.com/brittonr/aspen.git", branch = "main" }

# Common dependencies
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
tempfile = "3.4"
