[workspace]
members = [
    # WASM handler plugins (cdylib)
    "crates/aspen-hooks-plugin",
    "crates/aspen-kv-plugin",
    "crates/aspen-sql-plugin",
    "crates/aspen-coordination-plugin",
    "crates/aspen-automerge-plugin",
    "crates/aspen-secrets-plugin",
    "crates/aspen-service-registry-plugin",
    "crates/aspen-forge-plugin",
    # Example plugins
    "crates/aspen-audit-logger",
    "crates/aspen-kv-counter",
    "crates/aspen-scheduled-cleanup",
    # Tooling
    "crates/aspen-plugin-signing",
    "crates/cargo-aspen-plugin",
]
resolver = "3"

[workspace.dependencies]
# Aspen crates (sibling repos)
aspen-wasm-guest-sdk = { path = "../aspen-wasm-guest-sdk/crates/aspen-wasm-guest-sdk" }
aspen-client-api = { path = "../aspen/crates/aspen-client-api", default-features = false }
aspen-plugin-api = { path = "../aspen/crates/aspen-plugin-api" }

# Third-party
anyhow = "1"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
