[package]
name = "aspen-automerge-plugin"
version = "0.1.0"
edition = "2024"
description = "WASM guest plugin for Automerge CRDT document management"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
aspen-wasm-guest-sdk = { workspace = true }
aspen-client-api = { workspace = true, default-features = false, features = ["automerge"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
