[package]
name = "aspen-kv-counter"
version = "0.1.0"
edition = "2024"
description = "Example Aspen WASM plugin: KV-backed distributed counter"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
aspen-wasm-guest-sdk = { path = "../../../aspen-wasm-guest-sdk/crates/aspen-wasm-guest-sdk" }
serde_json = "1.0"
