[package]
name = "aspen-plugin-signing"
version = "0.1.0"
edition = "2024"
description = "Ed25519 signing and verification for Aspen WASM plugins"
license = "AGPL-3.0-or-later"

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
