[package]
name = "cargo-aspen-plugin"
version = "0.1.0"
edition = "2024"
description = "Cargo subcommand for scaffolding, building, signing, and verifying Aspen WASM plugins"
license = "AGPL-3.0-or-later"

[[bin]]
name = "cargo-aspen-plugin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aspen-plugin-api = { workspace = true }
aspen-plugin-signing = { path = "../aspen-plugin-signing" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
